GMS-12674, Consent checkbox in English, 2018-05-03

--- a/update - English (EN).html
+++ b/update - English (EN).html
@@ -8,26 +8,26 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans" />
-<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Montserrat" />
-<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Slabo+27px" />
-<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Indie+Flower" />
-<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Dancing+Script:400,700" />
-<link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" />
-<link rel="stylesheet" type="text/css" href="http://www.proquest.com/includes/IMC-animate.css" />
-<link rel="stylesheet" type="text/css" href="http://www.proquest.com/includes/IMC-normalize.css" />
-<link rel="stylesheet" type="text/css" href="http://www.proquest.com/includes/IMC-bootstrap.css" />
-<link rel="stylesheet" type="text/css" href="http://www.proquest.com/includes/IMC-style.css" />
-<link rel="stylesheet" type="text/css" href="http://www.proquest.com/includes/IMC-responsive.css" />
-<link rel="stylesheet" type="text/css" href="http://www.proquest.com/includes/bootstrap-override-20140226.css" />
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat" />
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Slabo+27px" />
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Indie+Flower" />
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Dancing+Script:400,700" />
+<link rel="stylesheet" type="text/css" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" />
+<link rel="stylesheet" type="text/css" href="IMC-animate.css" />
+<link rel="stylesheet" type="text/css" href="IMC-normalize.css" />
+<link rel="stylesheet" type="text/css" href="IMC-bootstrap.css" />
+<link rel="stylesheet" type="text/css" href="IMC-style.css" />
+<link rel="stylesheet" type="text/css" href="IMC-responsive.css" />
+<link rel="stylesheet" type="text/css" href="bootstrap-override-20140226.css" />
 
-<script src="http://www.proquest.com/includes/IMC-modernizr-2.6.2.min.js"></script>
-<!--[if IE]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-<script src="http://www.proquest.com/includes/IMC-jquery-1.10.2.min.js"></script>
-<script src="http://www.proquest.com/includes/bootstrap.min.js"></script>
-<script src="http://www.proquest.com/includes/parsley.min.js"></script>
-<script src="http://www.proquest.com/includes/jquery.cookie.js"></script>
-<script src="http://www.proquest.com/includes/jquery.form.min.js"></script>
-<script src="http://www.proquest.com/includes/pq-clear-preference-center.js"></script>
+<script src="IMC-modernizr-2.6.2.min.js"></script>
+<!--[if IE]><script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+<script src="IMC-jquery-1.10.2.min.js"></script>
+<script src="bootstrap.min.js"></script>
+<script src="parsley.min.js"></script>
+<script src="jquery.cookie.js"></script>
+<script src="jquery.form.min.js"></script>
+<script src="pq-clear-preference-center.js"></script>
 <script>
 // Enable Bootstrap tooltips
 $(function () {
@@ -188,7 +188,7 @@ hr {
         <!-- Autocomplete set to "off" for compatibility workaround for Firefox. -->
 
         <!-- ====== START Hidden Fields for Checkboxes ====== -->
-          <!-- Needed because WCA, a.k.a. IMC doesn't know how to do multi-select checkboxes. -->
+          <!-- Needed because Silverpop/IMC/WCA doesn't know how to do multi-select checkboxes. -->
           <div id="shadow-fields">
             <input type="hidden" class="shadow-field" name="email_type_pc" />
             <input type="hidden" class="shadow-field" name="email_newsleter_type" />
@@ -444,7 +444,7 @@ hr {
             <span style="font-size: 24px;">What types of emails are you interested in receiving?<br>
               <br>
             </span>
-            <div class="panel-body">
+            <div class="panel-body cbgroup">
 
               <div class="row">
                 <div class="col-md-4">
@@ -487,7 +487,7 @@ hr {
             <span style="font-size: 24px;">Newsletters<br>
               <br>
             </span>
-            <div class="panel-body">
+            <div class="panel-body cbgroup">
 
               <div class="row">
                 <div class="col-md-4">
@@ -554,7 +554,7 @@ hr {
               <span style="font-size: 20px; font-weight: bold;">Collection Types<br>
                 <br>
               </span>
-              <div class="panel-body">
+              <div class="panel-body cbgroup">
 
                 <div class="row">
                   <div class="col-md-4">
@@ -613,7 +613,7 @@ hr {
                 <div class="row">
                   <div class="col-md-4">
                     <div class="form-group">
-                      <input type="button" onclick="toggleCheckboxes('email_collection_types_cbgroup', this);" value="Select All" id="toggle1" class="btn btn-primary btn-xs" />
+                      <input type="button" onclick="toggleCheckboxes('email_collection_types_cbgroup', this);" value="Select All" class="btn btn-primary btn-xs select-all-btn" />
                     </div>
                   </div>
                 </div>
@@ -627,7 +627,7 @@ hr {
               <span style="font-size: 20px; font-weight: bold;">Subject Areas<br>
                 <br>
               </span>
-              <div class="panel-body">
+              <div class="panel-body cbgroup">
 
                 <div class="row">
                   <div class="col-md-4">
@@ -722,7 +722,7 @@ hr {
                 <div class="row">
                   <div class="col-md-4">
                     <div class="form-group">
-                      <input type="button" onclick="toggleCheckboxes('email_topic_pc_cbgroup', this);" value="Select All" id="toggle2" class="btn btn-primary btn-xs" />
+                      <input type="button" onclick="toggleCheckboxes('email_topic_pc_cbgroup', this);" value="Select All" class="btn btn-primary btn-xs select-all-btn" />
                     </div>
                   </div>
                 </div>
@@ -734,18 +734,39 @@ hr {
           </div>
         <!-- ====== END Section 4 - Topics of Interest ====== -->
 
+          <hr>
+
+        <!-- ====== START Submission Buttons ====== -->
           <div class="panel">
             <div class="panel-body">
+
               <div class="row">
-                <a name="SubmitButton"></a>
-                <input type="submit" value="Submit" class="btn btn-primary btn-lg" />
-                <input type="button" value="Clear Preferences" onclick="clearPreferences();" class="btn btn-primary btn-lg" />
+                <div class="col-xs-12">
+                  <p>Privacy regulations require that we get your consent to continue to collect, store and use the personal information submitted for account creation or collected while using our services.</p>
+                  <div class="form-group">
+                    <label class="pq-form-label"><span class="parsley-required">*</span>&nbsp;<input type="checkbox" value="Yes" name="Double_OptIn_Completed" required="" />  <!-- name="Double OptIn" in production -->
+                    I consent to the collection and use of my personal information consistent with the <a href="http://www.proquest.com/go/privacy" style="color: #00a0df;">Privacy Policy</a>. I&nbsp;acknowledge that use of the service is subject to the <a href="http://proquest.com/go/termsandconditions" style="color: #00a0df;">Terms & Conditions</a>.</label>
+                  </div>
+                </div>
               </div>
+
+              <div class="row">
+                <div class="col-xs-12">
+                  <div class="form-group">
+                    <a name="SubmitButton"></a>
+                    <input type="submit" value="Submit" class="btn btn-primary btn-lg" />
+                    <input type="button" value="Clear Preferences" onclick="clearPreferences();" class="btn btn-primary btn-lg" />
+                  </div>
+                </div>
+              </div>
+
             </div>
           </div>
+        <!-- ====== END Submission Buttons ====== -->
 
           <input type="hidden" name="LastTouchLeadSource" id="LastTouchLeadSource" value="Targeted Email">
           <input type="hidden" name="LastTouchLeadSourceDate" id="LastTouchLeadSourceDate" value="mm/dd/yyyy">
+          <input type="hidden" name="Double_OptIn_Date" id="DoubleOptInDate" value="mm/dd/yyyy">  <!-- name="Double OptIn Date" in production -->
 
         </form>
       <!-- ======== END FORM ======== -->
@@ -819,7 +840,6 @@ var UNSELECT_ALL_LABEL = 'Unselect All';
 // Function to set checkboxes from hidden shadow fields mapped to DB fields 
 //  required because Silverpop/IMC/WCA is dain-bramaged and doesn't do it for us
 function setCheckboxes() {
-  console.log('In setCheckboxes();'); ////////////////
   $('.shadow-field').each(function() {
     var shadow_field = $(this);
     var checkboxes = $('input[type="checkbox"][name="'+shadow_field.attr('name')+'_cbgroup"]');
@@ -835,7 +855,6 @@ function setCheckboxes() {
 // Function to set hidden shadow fields (mapped to DB fields) based on checkbox values
 //  required because Silverpop/IMC/WCA is dain-bramaged and doesn't do it for us
 function getCheckboxes() {
-  console.log('In getCheckboxes();'); ////////////////
   $('.shadow-field').each(function() {
     var shadow_field = $(this);
     var checkboxes = $('input[type="checkbox"][name="'+shadow_field.attr('name')+'_cbgroup"]');
@@ -868,13 +887,12 @@ function toggleCheckboxes(checkboxesSelector, buttonSelector) {
 
 // Function to clear the checkbox selections from the form
 function clearPreferences() {
-  $(':input', '#pq-contact').not(':text, :button, :submit, :reset, :hidden').removeAttr('checked').removeAttr('selected');
-  $('#toggle1').val(SELECT_ALL_LABEL);
-  $('#toggle2').val(SELECT_ALL_LABEL);
+  $('input:checkbox', '.cbgroup').removeAttr('checked');
+  $('.select-all-btn').val(SELECT_ALL_LABEL);
 }
 
-// Function to set the date for the "Last Touch Lead Source Date"
-function setLastTouchLeadSourceDate() {
+// Function to get today's date for filling out date fields
+function getTodaysDateString() {
   var today = new Date();
   var dd = today.getDate();
   var mm = today.getMonth()+1; //January is 0!
@@ -883,20 +901,23 @@ function setLastTouchLeadSourceDate() {
   if (dd < 10) { dd = '0'+dd };
   if (mm < 10) { mm = '0'+mm };
   today = mm+'/'+dd+'/'+yyyy;
-  $('#LastTouchLeadSourceDate').val(today);  // Sets hidden field for current date
+
+  return today;
 }
 
 // Document Ready
 $( document ).ready(function() {
 
-  // From pq-clear-contact-form.js - disallow changing the email address if already set
+  // From pq-clear-preference-center.js - disallow changing the email address if already set
   initContactForm('pq-contact', 'control_EMAIL', 'control_COLUMN30');
 
-  // Populate checkboxes
+  // Populate checkboxes with data from DB
   setCheckboxes();
 
-  // Do that last-touch-lead-source thing
-  setLastTouchLeadSourceDate();
+  // Set hidden fields to current date
+  var dateString = getTodaysDateString();
+  $('#LastTouchLeadSourceDate').val(dateString);
+  $('#DoubleOptInDate').val(dateString);
 
   console.log('Document loaded.'); ////////////////
 
