GMS-12567, Adding cookie consent to EN & ES, 2018-05-24

--- a/unsubscribe - English (EN).html
+++ b/unsubscribe - English (EN).html
@@ -2,6 +2,7 @@
 <html lang="en" class="no-js">
   <head>
     <title>ProQuest Unsubscribe</title>
+    <link rel="icon" type="image/x-icon" href="https://www.proquest.com/favicon.ico" />
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans" />
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat" />
@@ -155,22 +156,22 @@ a:hover, a:focus {
         <div class="col-md-2 col-xs-6">
           <div class="single_ft quicklinks">
             <h4>Navigation</h4><!--Navigation-->
-            <a name="Footer_Navigation_Libraries" href="https://www.proquest.com/libraries">For Libraries</a><br>
-            <a name="Footer_Navigation_Researchers" href="https://www.proquest.com/researchers">For Researchers</a><br>
-            <a name="Footer_Navigation_ProductsServices" href="https://www.proquest.com/products-services">Products &amp; Services</a><br>
-            <a name="Footer_Navigation_Customers" href="https://www.proquest.com/customer-care">For Customers</a><br>
-            <a name="Footer_Navigation_Events" href="https://www.proquest.com/events">Events</a><br>
-            <a name="Footer_Navigation_About" href="https://www.proquest.com/about">About</a><br>
-            <a name="Footer_Navigation_Blogs" href="https://www.proquest.com/blog">Blogs</a>
+            <a name="Footer_Navigation_Libraries" href="https://www.proquest.com/libraries" xthyperlink="920672" xt="SPCLICK" xtlinkname="Footer_Navigation_Libraries">For Libraries</a><br>
+            <a name="Footer_Navigation_Researchers" href="https://www.proquest.com/researchers" xthyperlink="920673" xt="SPCLICK" xtlinkname="Footer_Navigation_Researchers">For Researchers</a><br>
+            <a name="Footer_Navigation_ProductsServices" href="https://www.proquest.com/products-services" xthyperlink="920674" xt="SPCLICK" xtlinkname="Footer_Navigation_ProductsServices">Products &amp; Services</a><br>
+            <a name="Footer_Navigation_Customers" href="https://www.proquest.com/customer-care" xthyperlink="920675" xt="SPCLICK" xtlinkname="Footer_Navigation_Customers">For Customers</a><br>
+            <a name="Footer_Navigation_Events" href="https://www.proquest.com/events" xthyperlink="920676" xt="SPCLICK" xtlinkname="Footer_Navigation_Events">Events</a><br>
+            <a name="Footer_Navigation_About" href="https://www.proquest.com/about" xthyperlink="920677" xt="SPCLICK" xtlinkname="Footer_Navigation_About">About</a><br>
+            <a name="Footer_Navigation_Blogs" href="https://www.proquest.com/blog" xthyperlink="920678" xt="SPCLICK" xtlinkname="Footer_Navigation_Blogs">Blogs</a>
           </div>
         </div>
         <div class="col-md-2 col-xs-6">
           <div class="single_ft quicklinks">
             <h4>Support</h4><!--Support-->
-            <a name="Footer_Support_SupportCenter" href="https://www.proquest.com/company/support-landing.html">Support Center</a><br>
-            <a name="Footer_Support_ToolsResources" href="https://www.proquest.com/customer-care/tools-resources/">Tools and Resources</a><br>
-            <a name="Footer_Support_TrainingWebinars" href="https://www.proquest.com/customer-care/training-webinars/">Training Webinars</a><br>
-            <a name="Footer_Support_LibGuides" href="https://proquest.libguides.com/home">LibGuides</a>
+            <a name="Footer_Support_SupportCenter" href="https://www.proquest.com/company/support-landing.html" xthyperlink="920679" xt="SPCLICK" xtlinkname="Footer_Support_SupportCenter">Support Center</a><br>
+            <a name="Footer_Support_ToolsResources" href="https://www.proquest.com/customer-care/tools-resources/" xthyperlink="920680" xt="SPCLICK" xtlinkname="Footer_Support_ToolsResources">Tools and Resources</a><br>
+            <a name="Footer_Support_TrainingWebinars" href="https://www.proquest.com/customer-care/training-webinars/" xthyperlink="920681" xt="SPCLICK" xtlinkname="Footer_Support_TrainingWebinars">Training Webinars</a><br>
+            <a name="Footer_Support_LibGuides" href="https://proquest.libguides.com/home" xthyperlink="920682" xt="SPCLICK" xtlinkname="Footer_Support_LibGuides">LibGuides</a>
           </div>
         </div>
       </div>
@@ -183,12 +184,12 @@ a:hover, a:focus {
   <div class="main_footer">
     <div class="container links col-xs-12">
       <div style="text-align: center;">
-        <a name="BottomNav_Privacy" href="https://www.proquest.com/about/privacy-statement.html">Privacy</a>
-        <a name="BottomNav_TermsofUse" href="https://www.proquest.com/about/terms-and-conditions.html">Terms of Use</a>
-        <a name="BottomNav_Cookies" href="https://www.proquest.com/about/cookie-policy.html">Cookies</a>
+        <a name="BottomNav_Privacy" href="https://www.proquest.com/about/privacy-statement.html" xthyperlink="920683" xt="SPCLICK" xtlinkname="BottomNav_Privacy">Privacy</a>
+        <a name="BottomNav_TermsofUse" href="https://www.proquest.com/about/terms-and-conditions.html" xthyperlink="920684" xt="SPCLICK" xtlinkname="BottomNav_TermsofUse">Terms of Use</a>
+        <a name="BottomNav_Cookies" href="https://www.proquest.com/about/cookie-policy.html" xthyperlink="920685" xt="SPCLICK" xtlinkname="BottomNav_Cookies">Cookies</a>
         <div id="teconsent" style="display: inline;"></div>
-        <a name="BottomNav_Accessibility" href="https://www.proquest.com/company/ProQuest-ADA-Compliance.html">Accessibility</a>
-        <a name="BottomNav_DMCAPolicy" href="https://media2.proquest.com/documents/dmcapolicy.pdf">DMCA Policy</a>
+        <a name="BottomNav_Accessibility" href="https://www.proquest.com/company/ProQuest-ADA-Compliance.html" xthyperlink="920686" xt="SPCLICK" xtlinkname="BottomNav_Accessibility">Accessibility</a>
+        <a name="BottomNav_DMCAPolicy" href="https://media2.proquest.com/documents/dmcapolicy.pdf" xthyperlink="920687" xt="SPCLICK" xtlinkname="BottomNav_DMCAPolicy">DMCA Policy</a>
       </div>
     </div>
   </div><!-- /.main_footer -->
