--- a/confirmation - English (EN).html
+++ b/confirmation - English (EN).html
@@ -8,6 +8,7 @@
   <meta name="com.silverpop.defaultsource" content="Web" />
   <meta name="com.silverpop.cothost" content="engage4.silverpop.com" />
   <title>ProQuest Preference Center Confirmation</title>
+  <link rel="icon" type="image/x-icon" href="https://www.proquest.com/favicon.ico" />
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans" />
@@ -92,9 +93,9 @@
               <!-- Collect the nav links, forms, and other content for toggling -->
               <div id="navbar-collapse-1" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
-                  <li><a name="TopNav_SupportCenter" href="https://www.proquest.com/company/support-landing.html">Support Center |</a></li>
-                  <li><a name="TopNavNews" href="https://www.proquest.com/about/news/">News |</a></li>
-                  <li><a name="TopNav_Contact" href="https://www.proquest.com/contact/contact-landing.html">Contact</a></li>
+                  <li><a name="TopNav_SupportCenter" href="https://www.proquest.com/company/support-landing.html" xthyperlink="920653" xt="SPCLICK" xtlinkname="TopNav_SupportCenter">Support Center |</a></li>
+                  <li><a name="TopNavNews" href="https://www.proquest.com/about/news/" xthyperlink="920654" xt="SPCLICK" xtlinkname="TopNavNews">News |</a></li>
+                  <li><a name="TopNav_Contact" href="https://www.proquest.com/contact/contact-landing.html" xthyperlink="920655" xt="SPCLICK" xtlinkname="TopNav_Contact">Contact</a></li>
                 </ul>
               </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
@@ -144,22 +145,22 @@
         <div class="col-md-2 col-xs-6">
           <div class="single_ft quicklinks">
             <h4>Navigation</h4><!--Navigation-->
-            <a name="Footer_Navigation_Libraries" href="https://www.proquest.com/libraries">For Libraries</a><br>
-            <a name="Footer_Navigation_Researchers" href="https://www.proquest.com/researchers">For Researchers</a><br>
-            <a name="Footer_Navigation_ProductsServices" href="https://www.proquest.com/products-services">Products &amp; Services</a><br>
-            <a name="Footer_Navigation_Customers" href="https://www.proquest.com/customer-care">For Customers</a><br>
-            <a name="Footer_Navigation_Events" href="https://www.proquest.com/events">Events</a><br>
-            <a name="Footer_Navigation_About" href="https://www.proquest.com/about">About</a><br>
-            <a name="Footer_Navigation_Blogs" href="https://www.proquest.com/blog">Blogs</a>
+            <a name="Footer_Navigation_Libraries" href="https://www.proquest.com/libraries" xthyperlink="920656" xt="SPCLICK" xtlinkname="Footer_Navigation_Libraries">For Libraries</a><br>
+            <a name="Footer_Navigation_Researchers" href="https://www.proquest.com/researchers" xthyperlink="920657" xt="SPCLICK" xtlinkname="Footer_Navigation_Researchers">For Researchers</a><br>
+            <a name="Footer_Navigation_ProductsServices" href="https://www.proquest.com/products-services" xthyperlink="920658" xt="SPCLICK" xtlinkname="Footer_Navigation_ProductsServices">Products &amp; Services</a><br>
+            <a name="Footer_Navigation_Customers" href="https://www.proquest.com/customer-care" xthyperlink="920659" xt="SPCLICK" xtlinkname="Footer_Navigation_Customers">For Customers</a><br>
+            <a name="Footer_Navigation_Events" href="https://www.proquest.com/events" xthyperlink="920660" xt="SPCLICK" xtlinkname="Footer_Navigation_Events">Events</a><br>
+            <a name="Footer_Navigation_About" href="https://www.proquest.com/about" xthyperlink="920661" xt="SPCLICK" xtlinkname="Footer_Navigation_About">About</a><br>
+            <a name="Footer_Navigation_Blogs" href="https://www.proquest.com/blog" xthyperlink="920662" xt="SPCLICK" xtlinkname="Footer_Navigation_Blogs">Blogs</a>
           </div>
         </div>
         <div class="col-md-2 col-xs-6">
           <div class="single_ft quicklinks">
             <h4>Support</h4><!--Support-->
-            <a name="Footer_Support_SupportCenter" href="https://www.proquest.com/company/support-landing.html">Support Center</a><br>
-            <a name="Footer_Support_ToolsResources" href="https://www.proquest.com/customer-care/tools-resources/">Tools and Resources</a><br>
-            <a name="Footer_Support_TrainingWebinars" href="https://www.proquest.com/customer-care/training-webinars/">Training Webinars</a><br>
-            <a name="Footer_Support_LibGuides" href="https://proquest.libguides.com/home">LibGuides</a>
+            <a name="Footer_Support_SupportCenter" href="https://www.proquest.com/company/support-landing.html" xthyperlink="920663" xt="SPCLICK" xtlinkname="Footer_Support_SupportCenter">Support Center</a><br>
+            <a name="Footer_Support_ToolsResources" href="https://www.proquest.com/customer-care/tools-resources/" xthyperlink="920664" xt="SPCLICK" xtlinkname="Footer_Support_ToolsResources">Tools and Resources</a><br>
+            <a name="Footer_Support_TrainingWebinars" href="https://www.proquest.com/customer-care/training-webinars/" xthyperlink="920665" xt="SPCLICK" xtlinkname="Footer_Support_TrainingWebinars">Training Webinars</a><br>
+            <a name="Footer_Support_LibGuides" href="https://proquest.libguides.com/home" xthyperlink="920666" xt="SPCLICK" xtlinkname="Footer_Support_LibGuides">LibGuides</a>
           </div>
         </div>
       </div>
@@ -172,12 +173,12 @@
   <div class="main_footer">
     <div class="container links col-xs-12">
       <div style="text-align: center;">
-        <a name="BottomNav_Privacy" href="https://www.proquest.com/about/privacy-statement.html">Privacy</a>
-        <a name="BottomNav_TermsofUse" href="https://www.proquest.com/about/terms-and-conditions.html">Terms of Use</a>
-        <a name="BottomNav_Cookies" href="https://www.proquest.com/about/cookie-policy.html">Cookies</a>
+        <a name="BottomNav_Privacy" href="https://www.proquest.com/about/privacy-statement.html" xthyperlink="920667" xt="SPCLICK" xtlinkname="BottomNav_Privacy">Privacy</a>
+        <a name="BottomNav_TermsofUse" href="https://www.proquest.com/about/terms-and-conditions.html" xthyperlink="920668" xt="SPCLICK" xtlinkname="BottomNav_TermsofUse">Terms of Use</a>
+        <a name="BottomNav_Cookies" href="https://www.proquest.com/about/cookie-policy.html" xthyperlink="920669" xt="SPCLICK" xtlinkname="BottomNav_Cookies">Cookies</a>
         <div id="teconsent" style="display: inline;"></div>
-        <a name="BottomNav_Accessibility" href="https://www.proquest.com/company/ProQuest-ADA-Compliance.html">Accessibility</a>
-        <a name="BottomNav_DMCAPolicy" href="https://media2.proquest.com/documents/dmcapolicy.pdf">DMCA Policy</a>
+        <a name="BottomNav_Accessibility" href="https://www.proquest.com/company/ProQuest-ADA-Compliance.html" xthyperlink="920670" xt="SPCLICK" xtlinkname="BottomNav_Accessibility">Accessibility</a>
+        <a name="BottomNav_DMCAPolicy" href="https://media2.proquest.com/documents/dmcapolicy.pdf" xthyperlink="920671" xt="SPCLICK" xtlinkname="BottomNav_DMCAPolicy">DMCA Policy</a>
       </div>
     </div>
   </div><!-- /.main_footer -->
@@ -200,7 +201,7 @@ new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&amp;l='+l:'';j.async=true;j.src=
 '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-PKTQGK');
-</script>
+    </script>
     <!-- End Google Tag Manager -->
 
   </body>
