--- a/update - Spanish (ES).html
+++ b/update - Spanish (ES).html
@@ -8,26 +8,26 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans" />
-<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Montserrat" />
-<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Slabo+27px" />
-<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Indie+Flower" />
-<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Dancing+Script:400,700" />
-<link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" />
-<link rel="stylesheet" type="text/css" href="http://www.proquest.com/includes/IMC-animate.css" />
-<link rel="stylesheet" type="text/css" href="http://www.proquest.com/includes/IMC-normalize.css" />
-<link rel="stylesheet" type="text/css" href="http://www.proquest.com/includes/IMC-bootstrap.css" />
-<link rel="stylesheet" type="text/css" href="http://www.proquest.com/includes/IMC-style.css" />
-<link rel="stylesheet" type="text/css" href="http://www.proquest.com/includes/IMC-responsive.css" />
-<link rel="stylesheet" type="text/css" href="http://www.proquest.com/includes/bootstrap-override-20140226.css" />
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat" />
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Slabo+27px" />
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Indie+Flower" />
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Dancing+Script:400,700" />
+<link rel="stylesheet" type="text/css" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" />
+<link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/IMC-animate.css" />
+<link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/IMC-normalize.css" />
+<link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/IMC-bootstrap.css" />
+<link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/IMC-style.css" />
+<link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/IMC-responsive.css" />
+<link rel="stylesheet" type="text/css" href="https://www.proquest.com/includes/bootstrap-override-20140226.css" />
 
-<script src="http://www.proquest.com/includes/IMC-modernizr-2.6.2.min.js"></script>
-<!--[if IE]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-<script src="http://www.proquest.com/includes/IMC-jquery-1.10.2.min.js"></script>
-<script src="http://www.proquest.com/includes/bootstrap.min.js"></script>
-<script src="http://www.proquest.com/includes/parsley.min.js"></script>
-<script src="http://www.proquest.com/includes/jquery.cookie.js"></script>
-<script src="http://www.proquest.com/includes/jquery.form.min.js"></script>
-<script src="http://www.proquest.com/includes/pq-clear-preference-center.js"></script>
+<script src="https://www.proquest.com/includes/IMC-modernizr-2.6.2.min.js"></script>
+<!--[if IE]><script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+<script src="https://www.proquest.com/includes/IMC-jquery-1.10.2.min.js"></script>
+<script src="https://www.proquest.com/includes/bootstrap.min.js"></script>
+<script src="https://www.proquest.com/includes/parsley.min.js"></script>
+<script src="https://www.proquest.com/includes/jquery.cookie.js"></script>
+<script src="https://www.proquest.com/includes/jquery.form.min.js"></script>
+<script src="https://www.proquest.com/includes/pq-clear-preference-center.js"></script>
 <script>
 // Enable Bootstrap tooltips
 $(function () {
@@ -107,9 +107,9 @@ hr {
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div id="navbar-collapse-1" class="collapse navbar-collapse">
               <ul class="nav navbar-nav navbar-right">
-                <li><a name="TopNav_SupportCenter" href="http://www.proquest.com/company/support-landing.html">Support Center |</a></li>
-                <li><a name="TopNavNews" href="http://www.proquest.com/about/news/">News |</a></li>
-                <li><a name="TopNav_Contact" href="http://www.proquest.com/contact/contact-landing.html">Contact</a></li>
+                <li><a name="TopNav_SupportCenter" href="https://www.proquest.com/company/support-landing.html" xthyperlink="915135" xt="SPCLICK" xtlinkname="TopNav_SupportCenter">Support Center |</a></li>
+                <li><a name="TopNavNews" href="https://www.proquest.com/about/news/" xthyperlink="915136" xt="SPCLICK" xtlinkname="TopNavNews">News |</a></li>
+                <li><a name="TopNav_Contact" href="https://www.proquest.com/contact/contact-landing.html" xthyperlink="915137" xt="SPCLICK" xtlinkname="TopNav_Contact">Contact</a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid -->
@@ -123,7 +123,7 @@ hr {
   <div class="container">
     <div class="col-md-12">
       <div class="inner_proquest">
-        <a href="https://www.proquest.com" target="_blank" name="httpswwwproquestcom"><img src="pq-header-logo.jpg" title="ProQuest Logo" alt="ProQuest" class="img-responsive" width="169" height="66" spname="pq-header-logo.jpg" xt="SPIMAGE" /></a>
+        <a href="https://www.proquest.com" target="_blank" name="httpswwwproquestcom" xthyperlink="915138" xt="SPCLICK" xtlinkname="httpswwwproquestcom"><img src="pq-header-logo.jpg" title="ProQuest Logo" alt="ProQuest" class="img-responsive" width="169" height="66" spname="pq-header-logo.jpg" xt="SPIMAGE" contentId="21963239" /></a>
       </div>
     </div>
   </div>
@@ -134,7 +134,7 @@ hr {
     <div class="col-md-12">
       <div class="inner_db">
         <div class="top_db">
-          <p><a href="https://www.proquest.com" style="color: #00a0df; text-decoration: none;" name="httpswwwproquestcom">ProQuest</a> > Your Email Preferences</p>
+          <p><a href="https://www.proquest.com" style="color: #00a0df; text-decoration: none;" name="httpswwwproquestcom" xthyperlink="915139" xt="SPCLICK" xtlinkname="httpswwwproquestcom">ProQuest</a> > Your Email Preferences</p>
         </div>
         <div class="bottom_t"><span style="font-size: 36px; padding-bottom: 10px;">Your Email Preferences</span></div>
       </div>
@@ -168,8 +168,8 @@ hr {
     </div>
     <div class="col-md-6">
       <div class="well well-sm">
-        <p>Para anular la suscripción de todos los correos de ProQuest <a href="http://go.proquest.com/preferences/unsubscribe.html" target="_blank" name="Unsubscribe Redirect" style="color: #00a0df; text-decoration: none;">haga clic aquí</a>.</p>
-        <p>Para administrar sus preferencias de comunicación de calle Alexander, por favor <a href="https://alexanderstreet.com/preferences" target="_blank" name="AS Unsubscribe" style="color: #00a0df; text-decoration: none;">haga clic aquí</a>.</p>
+        <p>Para anular la suscripción de todos los correos de ProQuest <a href="https://go.proquest.com/preferences/unsubscribe.html" target="_blank" name="Unsubscribe Redirect" style="color: #00a0df; text-decoration: none;" xthyperlink="915140" xt="SPCLICK" xtlinkname="Unsubscribe Redirect">haga clic aquí</a>.</p>
+        <p>Para administrar sus preferencias de comunicación de calle Alexander, por favor <a href="https://alexanderstreet.com/preferences" target="_blank" name="AS Unsubscribe" style="color: #00a0df; text-decoration: none;" xthyperlink="915141" xt="SPCLICK" xtlinkname="AS Unsubscribe">haga clic aquí</a>.</p>
       </div>
     </div>
   </div>
@@ -763,22 +763,22 @@ hr {
         <div class="col-md-2 col-xs-6">
           <div class="single_ft">
             <h4>Navegación</h4><!--Navigation-->
-            <a name="Footer_Navigation_Libraries" href="http://www.proquest.com/libraries">Para bibliotecas</a><br>
-            <a name="Footer_Navigation_Researchers" href="http://www.proquest.com/researchers">Para los investigadores</a><br>
-            <a name="Footer_Navigation_ProductsServices" href="http://www.proquest.com/products-services"> Productos &amp; Servicios</a><br>
-            <a name="Footer_Navigation_Customers" href="http://www.proquest.com/customer-care">Para clientes</a><br>
-            <a name="Footer_Navigation_Events" href="http://www.proquest.com/events">Eventos</a><br>
-            <a name="Footer_Navigation_About" href="http://www.proquest.com/about">Sobre</a><br>
-            <a name="Footer_Navigation_Blogs" href="http://www.proquest.com/blog">Blogs</a>
+            <a name="Footer_Navigation_Libraries" href="https://www.proquest.com/libraries" xthyperlink="915142" xt="SPCLICK" xtlinkname="Footer_Navigation_Libraries">Para bibliotecas</a><br>
+            <a name="Footer_Navigation_Researchers" href="https://www.proquest.com/researchers" xthyperlink="915143" xt="SPCLICK" xtlinkname="Footer_Navigation_Researchers">Para los investigadores</a><br>
+            <a name="Footer_Navigation_ProductsServices" href="https://www.proquest.com/products-services" xthyperlink="915144" xt="SPCLICK" xtlinkname="Footer_Navigation_ProductsServices"> Productos &amp; Servicios</a><br>
+            <a name="Footer_Navigation_Customers" href="https://www.proquest.com/customer-care" xthyperlink="915145" xt="SPCLICK" xtlinkname="Footer_Navigation_Customers">Para clientes</a><br>
+            <a name="Footer_Navigation_Events" href="https://www.proquest.com/events" xthyperlink="915146" xt="SPCLICK" xtlinkname="Footer_Navigation_Events">Eventos</a><br>
+            <a name="Footer_Navigation_About" href="https://www.proquest.com/about" xthyperlink="915147" xt="SPCLICK" xtlinkname="Footer_Navigation_About">Sobre</a><br>
+            <a name="Footer_Navigation_Blogs" href="https://www.proquest.com/blog" xthyperlink="915148" xt="SPCLICK" xtlinkname="Footer_Navigation_Blogs">Blogs</a>
           </div>
         </div>
         <div class="col-md-2 col-xs-6">
           <div class="single_ft">
             <h4>Soporte</h4><!--Support-->
-            <a name="Footer_Support_SupportCenter" href="http://www.proquest.com/company/support-landing.html">Centro de Apoyo</a><br>
-            <a name="Footer_Support_ToolsResources" href="http://www.proquest.com/customer-care/tools-resources/">Herramientas y recursos</a><br>
-            <a name="Footer_Support_TrainingWebinars" href="http://www.proquest.com/customer-care/training-webinars/">Seminarios web de formación</a><br>
-            <a name="Footer_Support_LibGuides" href="http://proquest.libguides.com/home">LibGuides</a>
+            <a name="Footer_Support_SupportCenter" href="https://www.proquest.com/company/support-landing.html" xthyperlink="915149" xt="SPCLICK" xtlinkname="Footer_Support_SupportCenter">Centro de Apoyo</a><br>
+            <a name="Footer_Support_ToolsResources" href="https://www.proquest.com/customer-care/tools-resources/" xthyperlink="915150" xt="SPCLICK" xtlinkname="Footer_Support_ToolsResources">Herramientas y recursos</a><br>
+            <a name="Footer_Support_TrainingWebinars" href="https://www.proquest.com/customer-care/training-webinars/" xthyperlink="915151" xt="SPCLICK" xtlinkname="Footer_Support_TrainingWebinars">Seminarios web de formación</a><br>
+            <a name="Footer_Support_LibGuides" href="https://proquest.libguides.com/home" xthyperlink="915152" xt="SPCLICK" xtlinkname="Footer_Support_LibGuides">LibGuides</a>
           </div>
         </div>
       </div>
@@ -790,11 +790,11 @@ hr {
       <div class="col-md-12">
         <div class="inner_footer">
           <p style="text-align: center;">
-            <a name="BottomNav_Privacy" href="http://www.proquest.com/about/privacy-statement.html">Privacy</a>&nbsp;&nbsp;
-            <a name="BottomNav_TermsofUse" href="http://www.proquest.com/about/terms-and-conditions.html">Terms of Use</a>&nbsp;&nbsp;
-            <a name="BottomNav_Cookies" href="http://www.proquest.com/about/cookie-policy.html">Cookies</a>&nbsp;&nbsp;
-            <a name="BottomNav_Accessibility" href="http://www.proquest.com/company/ProQuest-ADA-Compliance.html">Accessibility</a>&nbsp;&nbsp;
-            <a name="BottomNav_DMCAPolicy" href="http://media2.proquest.com/documents/dmcapolicy.pdf">DMCA Policy</a>
+            <a name="BottomNav_Privacy" href="https://www.proquest.com/about/privacy-statement.html" xthyperlink="915153" xt="SPCLICK" xtlinkname="BottomNav_Privacy">Privacy</a>&nbsp;&nbsp;
+            <a name="BottomNav_TermsofUse" href="https://www.proquest.com/about/terms-and-conditions.html" xthyperlink="915154" xt="SPCLICK" xtlinkname="BottomNav_TermsofUse">Terms of Use</a>&nbsp;&nbsp;
+            <a name="BottomNav_Cookies" href="https://www.proquest.com/about/cookie-policy.html" xthyperlink="915155" xt="SPCLICK" xtlinkname="BottomNav_Cookies">Cookies</a>&nbsp;&nbsp;
+            <a name="BottomNav_Accessibility" href="https://www.proquest.com/company/ProQuest-ADA-Compliance.html" xthyperlink="915156" xt="SPCLICK" xtlinkname="BottomNav_Accessibility">Accessibility</a>&nbsp;&nbsp;
+            <a name="BottomNav_DMCAPolicy" href="https://media2.proquest.com/documents/dmcapolicy.pdf" xthyperlink="915157" xt="SPCLICK" xtlinkname="BottomNav_DMCAPolicy">DMCA Policy</a>
           </p>
         </div>
       </div>
